--- a/home.html
+++ b/home.html
@@ -118,7 +118,7 @@
                     }
                     else{
                         $.ajax({
-                        url: "/site/reproductor/save-info",
+                        url: "https://plataforma.biialab.org/site/reproductor/save-info",
                         data : {doc : $('#dni').val()},
                         type : 'POST',
                         dataType: "json",
